# cocoindex

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  about.toml  pyproject.toml
.github/: SECURITY.md
.github/workflows/: _doc_release.yml  _docs_release.yml  _test.yml  docs.yml  docs_release.yml  docs_test.yml  format.yml  release.yml
dev/: README.md  generate_cli_docs.py  neo4j.yaml
docs/: docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: query.mdx
docs/docs/about/: community.md
docs/docs/ai/: llm.mdx
docs/docs/contributing/: guide.md  new_built_in_target.mdx  setup_dev_environment.md
docs/docs/core/: basics.md  cli-commands.md  cli.mdx  data_types.mdx  flow_def.mdx  flow_methods.mdx  settings.mdx
docs/docs/custom_ops/: custom_functions.mdx  custom_targets.mdx
docs/docs/examples/: index.md
docs/docs/examples/examples/: academic_papers_index.md  code_index.md  codebase_index.md  custom_targets.md  docs_to_knowledge_graph.md  document_ai.md  image_search.md  manual_extraction.md  multi_format_index.md  patient_form_extraction.md  photo_search.md  postgres_source.md  product_recommendation.md  simple_text_embedding.md  simple_vector_index.md
docs/docs/getting_started/: installation.md  quickstart.md
docs/docs/ops/: functions.md  sources.md  targets.md
docs/docs/sources/: index.md
docs/docs/targets/: index.md  kuzu.md  lancedb.md  neo4j.md  postgres.md  qdrant.md
docs/docs/tutorials/: live_updates.md  manage_flow_dynamically.mdx
docs/src/components/GitHubButton/: index.tsx
docs/src/css/: custom.css
docs/src/theme/DocCard/: index.tsx  styles.module.css
docs/src/theme/DocCardList/: index.tsx  styles.module.css
examples/amazon_s3_embedding/: .env.example  README.md  main.py  pyproject.toml
examples/azure_blob_embedding/: .env.example  README.md  main.py  pyproject.toml
examples/code_embedding/: README.md  main.py  pyproject.toml
examples/custom_output_files/: .gitignore  README.md  main.py  pyproject.toml
examples/custom_output_files/data/: bizarre_animals.md
examples/docs_to_knowledge_graph/: README.md  main.py  pyproject.toml
examples/face_recognition/: README.md  main.py  pyproject.toml
examples/face_recognition_embedding/: main.py  pyproject.toml
examples/fastapi_server_docker/: README.md  dockerfile  main.py  requirements.txt
examples/gdrive_text_embedding/: .env.example  README.md  main.py  pyproject.toml
examples/image_search/: .env  README.md  colpali_main.py  main.py  pyproject.toml
examples/image_search/frontend/: package-lock.json  package.json  vite.config.js
examples/image_search/frontend/src/: App.jsx
examples/live_updates/: .env  README.md  main.py  pyproject.toml
examples/live_updates/data/: chunk_norris.md
examples/manuals_llm_extraction/: README.md  main.py  pyproject.toml
examples/multi_format_indexing/: README.md  main.py  pyproject.toml
examples/paper_metadata/: .env.example  README.md  main.py  pyproject.toml
examples/patient_intake_extraction/: README.md  main.py  pyproject.toml
examples/pdf_embedding/: README.md  main.py  pyproject.toml
examples/postgres_source/: .env  .env.example  README.md  main.py  prepare_source_data.sql  pyproject.toml
examples/product_recommendation/: README.md  pyproject.toml
examples/text_embedding/: README.md  main.py  pyproject.toml
examples/text_embedding_lancedb/: .gitignore  README.md  main.py  pyproject.toml
examples/text_embedding_qdrant/: README.md  main.py  pyproject.toml
python/cocoindex/: __init__.py  auth_registry.py  cli.py  convert.py  engine_object.py  engine_value.py  flow.py  functions.py  index.py  lib.py  llm.py  op.py  query_handler.py  runtime.py  setting.py  sources.py  subprocess_exec.py  typing.py  user_app_loader.py  validation.py
python/cocoindex/functions/: __init__.py  _engine_builtin_specs.py  colpali.py  sbert.py
python/cocoindex/sources/: __init__.py  _engine_builtin_specs.py
python/cocoindex/targets/: __init__.py  _engine_builtin_specs.py  lancedb.py
python/cocoindex/tests/: conftest.py  test_convert.py  test_engine_object.py  test_engine_value.py  test_load_convert.py  test_transform_flow.py  test_typing.py  test_validation.py
src/: lib_context.rs  server.rs  settings.rs
src/base/: json_schema.rs  schema.rs  spec.rs  value.rs
src/builder/: analyzed_flow.rs  analyzer.rs  exec_ctx.rs  flow_builder.rs  plan.rs
src/execution/: db_tracking.rs  db_tracking_setup.rs  dumper.rs  evaluator.rs  indexing_status.rs  live_updater.rs  memoization.rs  row_indexer.rs  source_indexer.rs  stats.rs
src/llm/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  voyage.rs
src/ops/: factory_bases.rs  interface.rs  mod.rs  py_factory.rs  registration.rs  registry.rs  sdk.rs
src/ops/functions/: embed_text.rs  extract_by_llm.rs  mod.rs  parse_json.rs  split_by_separators.rs  split_recursively.rs  test_utils.rs
src/ops/shared/: mod.rs  postgres.rs  split.rs
src/ops/sources/: amazon_s3.rs  azure_blob.rs  google_drive.rs  local_file.rs  mod.rs  postgres.rs
src/ops/sources/shared/: mod.rs  pattern_matcher.rs
src/ops/targets/: kuzu.rs  neo4j.rs  postgres.rs  qdrant.rs
src/ops/targets/shared/: property_graph.rs
src/py/: convert.rs  mod.rs
src/service/: error.rs  flows.rs  mod.rs  query_handler.rs
src/setup/: auth_registry.rs  components.rs  db_metadata.rs  driver.rs  flow_features.rs  mod.rs  states.rs
src/utils/: db.rs  deser.rs  fingerprint.rs  mod.rs  str_sanitize.rs
