[package]
name = "cocoindex"
# Version used for local development is always higher than others to take precedence.
# Will be overridden for specific release versions.
version = "999.0.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"

[profile.release]
codegen-units = 1
lto = true

[lib]
name = "cocoindex_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = [
    "abi3-py311",
    "auto-initialize",
    "chrono",
    "uuid",
] }
pythonize = "0.25.0"
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }

anyhow = { version = "1.0.99", features = ["std"] }
async-trait = "0.1.88"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["query"] }
base64 = "0.22.1"
chrono = "0.4.41"
config = "0.15.14"
const_format = "0.2.34"
futures = "0.3.31"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "uuid",
    "tls-rustls-aws-lc-rs",
] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "full",
    "tracing",
    "fs",
    "sync",
] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
indexmap = { version = "2.10.0", features = ["serde"] }
blake2 = "0.10.6"
pgvector = { version = "0.4.1", features = ["sqlx"] }
phf = { version = "0.12.1", features = ["macros"] }
indenter = "0.3.4"
itertools = "0.14.0"
derivative = "2.2.0"
hex = "0.4.3"
schemars = "0.8.22"
env_logger = "0.11.8"
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
async-openai = "0.29.0"

tree-sitter = "0.25.8"
tree-sitter-language = "0.1.5"
# Per language tree-sitter parsers
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-css = "0.23.2"
tree-sitter-fortran = "0.5.1"
tree-sitter-go = "0.23.4"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
# The other more popular crate tree-sitter-kotlin requires tree-sitter < 0.23 for now
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-md = "0.3.2"
tree-sitter-pascal = "0.10.0"
tree-sitter-php = "0.23.11"
tree-sitter-python = "0.23.6"
tree-sitter-r = "1.2.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-scala = "0.24.0"
tree-sitter-sequel = "0.3.8"
tree-sitter-swift = "0.7.1"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.1"
tree-sitter-solidity = "1.2.13"

globset = "0.4.16"
unicase = "2.8.1"
google-drive3 = "6.0.0"
hyper-util = "0.1.16"
hyper-rustls = { version = "0.27.7" }
yup-oauth2 = "12.1.0"
rustls = { version = "0.23.31" }
http-body-util = "0.1.3"
yaml-rust2 = "0.10.3"
urlencoding = "2.1.3"
qdrant-client = "1.15.0"
uuid = { version = "1.18.0", features = ["serde", "v4", "v8"] }
tokio-stream = "0.1.17"
async-stream = "0.3.6"
neo4rs = "0.8.0"
bytes = "1.10.1"
rand = "0.9.2"
indoc = "2.0.6"
owo-colors = "4.2.2"
json5 = "0.4.1"
aws-config = "1.8.5"
aws-sdk-s3 = "1.102.0"
aws-sdk-sqs = "1.80.0"
time = { version = "0.3", features = ["macros", "serde"] }
numpy = "0.25.0"
infer = "0.19.0"
serde_with = { version = "3.14.0", features = ["base64"] }
google-cloud-aiplatform-v1 = { version = "0.4.4", default-features = false, features = [
    "prediction-service",
] }

azure_identity = { version = "0.21.0", default-features = false, features = [
    "enable_reqwest_rustls",
] }
azure_core = "0.21.0"
azure_storage = { version = "0.21.0", default-features = false, features = [
    "enable_reqwest_rustls",
    "hmac_rust",
] }
azure_storage_blobs = { version = "0.21.0", default-features = false, features = [
    "enable_reqwest_rustls",
    "hmac_rust",
] }
serde_path_to_error = "0.1.17"
