[build-system]
requires = ["maturin>=1.7.8,<2.0"]
build-backend = "maturin"

[project]
name = "cocoindex"
dynamic = ["version"]
description = "With CocoIndex, users declare the transformation, CocoIndex creates & maintains an index, and keeps the derived index up to date based on source update, with minimal computation and changes."
authors = [{ name = "CocoIndex", email = "cocoindex.io@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typing-extensions>=4.12; python_version < '3.13'",
    "click>=8.1.8",
    "rich>=14.0.0",
    "python-dotenv>=1.1.0",
    "watchfiles>=1.1.0",
    "numpy>=1.23.2",
    "psutil>=7.0.0",
]
license = "Apache-2.0"
license-files = ["THIRD_PARTY_NOTICES.html"]
urls = { Homepage = "https://cocoindex.io/" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
keywords = [
    "indexing",
    "real-time",
    "incremental",
    "pipeline",
    "search",
    "ai",
    "etl",
    "rag",
    "dataflow",
    "context-engineering",
]

[project.scripts]
cocoindex = "cocoindex.cli:cli"

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "cocoindex._engine"
features = ["pyo3/extension-module"]
include = ["THIRD_PARTY_NOTICES.html"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "pre-commit"]

embeddings = ["sentence-transformers>=3.3.1"]
colpali = ["colpali-engine"]
lancedb = ["lancedb>=0.25.0"]

# We need to repeat the dependency above to make it available for the `all` feature.
# Indirect dependencies such as "cocoindex[embeddings]" will not work for local development.
all = ["sentence-transformers>=3.3.1", "colpali-engine", "lancedb>=0.25.0"]

[tool.mypy]
python_version = "3.11"
strict = true
files = "python/cocoindex"
exclude = "(\\.venv|site-packages)"
disable_error_code = ["unused-ignore"]
